app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: ingress-lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: app1-html

---
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  namespace: ingress-lab
spec:
  selector:
    app: app1
  ports:
    - port: 80
      targetPort: 80
